--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
 #Server - app-devceasa2023
 server.port 8081
 
+#database
+spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_qa
+spring.datasource.username=postgres
+spring.datasource.password=flc123
+
+#hibernate
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+spring.jpa.open-in-view = true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
 
 
 #Thymeleaf
