security in jdbc plain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port 8081
 
 #database
-spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_test
+spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_qa
 spring.datasource.username=postgres
 spring.datasource.password=flc123
 
@@ -12,6 +12,8 @@ spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+
+
 
 
 
