--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 server.port 5001
 
 #database
-spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_prod1
+#spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_prod2
+spring.datasource.url=jdbc:postgresql://localhost:5432/devceasa_qa
 spring.datasource.username=postgres
 spring.datasource.password=flc123
 
