--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.open-in-view = true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-
+#spring.mvc.cors.allowed-origins=http://localhost:5001
+#spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
 
 
 #Thymeleaf
