aspect de auditoria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,11 @@ spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
-
+logging.level.com.flc.springthymeleaf.aspect.AuditAspect=DEBUG
 #spring.mvc.cors.allowed-origins=http://localhost:5001
 #spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
+
+
 
 
 #Thymeleaf
