log de arquivo evoluindo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ logging.level.com.flc.springthymeleaf.aspect.AuditAspect=DEBUG
 #spring.mvc.cors.allowed-origins=http://localhost:5001
 #spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
 
-
+# Usando Logback para logging
+logging.config=classpath:logback-spring.xml
 
 
 #Thymeleaf
