--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-hibernate5</artifactId>
-			
 		</dependency>
+		
+		<dependency>
+   		 <groupId>com.fasterxml.jackson.datatype</groupId>
+  		  <artifactId>jackson-datatype-jsr310</artifactId>
+ 		 </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
