--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,6 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+#spring.profiles.active=test
+
 unidades=KG,UN,GR
