Nota fiscal erro em json desserialize datas

--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
 			<artifactId>jackson-datatype-hibernate5</artifactId>
 		</dependency>
 		
-	<!--	<dependency>
+		<dependency>
    		 <groupId>com.fasterxml.jackson.datatype</groupId>
   		  <artifactId>jackson-datatype-jsr310</artifactId>
- 		 </dependency>-->
+ 		 </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
