--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/devceasa_qa3
 spring.datasource.username=postgres
 spring.datasource.password=flc123
 
+
+
+
 #hibernate
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
 logging.level.org.hibernate.SQL=DEBUG
