--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port 5001
 
 #database
 #spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_prod4
-spring.datasource.url=jdbc:postgresql://localhost:5432/devceasa_qa3
+spring.datasource.url=jdbc:postgresql://localhost:5432/ceasadev_prod4
 spring.datasource.username=postgres
 spring.datasource.password=flc123
 
