NotaFiscal tipo json implantado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.password=flc123
 #hibernate
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
 logging.level.org.hibernate.SQL=DEBUG
