--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,31 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
-			<version>2.13.3</version>
+			
+		</dependency>
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jdbc</artifactId>
+</dependency>
+		<dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+        </dependency>
+		<dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+		 </dependency>
+		<dependency>
+   			 <groupId>com.vladmihalcea</groupId>
+   			 <artifactId>hibernate-types-60</artifactId>
+   			 <version>2.21.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+ 		   <groupId>org.hibernate</groupId>
+   			 <artifactId>hibernate-core</artifactId>
+  			  <version>6.2.13.Final</version>
+  			  <type>pom</type>
 		</dependency>
 
 		<dependency>
