Nota salvando  aspect - suspenso

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,9 @@ logging.level.com.flc.springthymeleaf.aspect.AuditAspect=DEBUG
 # Usando Logback para logging
 logging.config=classpath:logback-spring.xml
 
+#Aspect
+spring.aop.proxy-target-class=false
+spring.aop.auto=false
 
 #Thymeleaf
 spring.thymeleaf.cache=false
