Nota resolvido aspect, salvando ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ logging.level.com.flc.springthymeleaf.aspect.AuditAspect=DEBUG
 logging.config=classpath:logback-spring.xml
 
 #Aspect
-spring.aop.proxy-target-class=false
-spring.aop.auto=false
+#spring.aop.proxy-target-class=false
+#spring.aop.auto=false
 
 #Thymeleaf
 spring.thymeleaf.cache=false
