--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port 5001
 
 #database
-spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_prod4
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ceasadev_qa6
+#spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_prod4
+spring.datasource.url=jdbc:postgresql://localhost:5432/ceasadev_qa7
 spring.datasource.username=postgres
 spring.datasource.password=flc123
 
@@ -38,4 +38,4 @@ spring.thymeleaf.suffix=.html
 
 #spring.profiles.active=test
 
-unidades=KG,UN,GR
+unidades=KG,UN,GR,DZ
