--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,24 +7,36 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ceasadev_qa8
 spring.datasource.username=postgres
 spring.datasource.password=flc123
 
+spring.profiles.active=default
 
-
+# devtools para produção
+#spring.devtools.add-properties=false
 
 #hibernate
 spring.jpa.hibernate.ddl-auto = update
+
+#para producao
+#spring.jpa.hibernate.ddl-auto = update
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql = true
 spring.jpa.open-in-view = true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+
+
+#hibernate
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=ERROR
+logging.level.org.springframework.jdbc.core.JdbcTemplate=ERROR
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=ERROR
 logging.level.com.flc.springthymeleaf.aspect.AuditAspect=DEBUG
+
 #spring.mvc.cors.allowed-origins=http://localhost:5001
 #spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
 
 # Usando Logback para logging
-logging.config=classpath:logback-spring.xml
+logging.config=classpath:logback-custom.xml
 
 #Aspect
 #spring.aop.proxy-target-class=false
