Embalagem associar ordenada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port 5001
 
 #database
 spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_prod7
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ceasadev_qa4
+#spring.datasource.url=jdbc:postgresql://172.16.252.90:5432/ceasadev_qa1
 spring.datasource.username=postgres
 spring.datasource.password=flc123
 
