--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.open-in-view = true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.SQL=ERROR
+logging.level.org.hibernate.type=ERROR
 logging.level.com.flc.springthymeleaf.aspect.AuditAspect=DEBUG
 #spring.mvc.cors.allowed-origins=http://localhost:5001
 #spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
