--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "spring.mvc.cors.allowed-origins",
     "type": "java.lang.String",
     "description": "A description for 'spring.mvc.cors.allowed-origins'"
+  },
+  {
+    "name": "unidades",
+    "type": "java.lang.String",
+    "description": "A description for 'unidades'"
   }
 ]}
